--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,30 +1,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@500&display=swap");
 
-html {
-  -webkit-font-smoothing: antialiased;
-  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica,
-    Arial, sans-serif;
-}
-
+p,
 h1,
-body,
-ul {
-  padding: 0;
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+  font-weight: 400;
   margin: 0;
+  padding: 0;
 }
 
 body {
-  color: #4a4a4a;
+  padding: 0;
+  margin: 0;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
+    Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  overflow: overlay;
+}
+
+body {
   font-size: 1em;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.5;
 }
 
-a {
-  text-decoration: inherit;
-  cursor: pointer;
-  color: inherit;
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #0008;
+  border-radius: 20px;
 }
 
 nav {
@@ -34,7 +44,11 @@ nav {
   padding: 15px 10%;
 }
 
-.name {
+.hero {
+  min-height: 100vh;
+}
+
+.botName {
   font-family: "Baloo Paaji 2", cursive;
   font-size: 40px;
   cursor: pointer;
@@ -42,7 +56,7 @@ nav {
 }
 
 .sep {
-  color: #340445;
+  color: rgb(82, 187, 82);
   margin: 0 2% 0 10px;
 }
 
@@ -58,6 +72,102 @@ nav {
 .lis {
   padding: 0 10px;
   cursor: pointer;
+}
+
+.section {
+  padding: 3rem 1.5rem;
+}
+
+.contentdiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5% 0;
+}
+
+.contentsection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contentsep {
+  margin: 0 2vw;
+  min-width: 350px;
+  max-width: 760px;
+}
+
+.contentsep h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin: 15px 0;
+}
+
+.contentsep h2 {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.reverse {
+  text-align: right;
+}
+
+.contentimg {
+  max-height: calc(100% - 30%);
+  max-width: calc(100% - 30%);
+  border-radius: 10px;
+  margin: 0 2vw;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+}
+
+@media only screen and (max-width: 1024px) {
+  .contentdiv {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .reverseflex {
+    flex-direction: column-reverse;
+  }
+
+  .reverse {
+    text-align: center;
+  }
+
+  .contentsep h2 {
+    font-size: 1.2rem;
+  }
+}
+
+.footer {
+  background-color: #fafafa;
+  padding: 3rem 1.5rem 6rem;
+}
+
+.footerDiv {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+a {
+  color: inherit;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.link {
+  color: #4a4a4a;
+  cursor: pointer;
+}
+
+.svg-inline--fa {
+  display: inline-block;
+  font-size: inherit;
+  height: 1em;
+  overflow: visible;
+  vertical-align: -0.125em;
 }
 
 .button {
@@ -92,61 +202,51 @@ nav {
   border-radius: 50%;
 }
 
-.hero {
-  display: flex;
-  min-height: 100vh;
+.lh {
+  margin-bottom: 10px;
 }
 
-.hero-body {
-  align-items: center;
-  display: flex;
-  flex-grow: 1;
+.mw {
+  max-width: 124px;
 }
 
-.center {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
+.dropdown {
+  position: relative;
+  display: block;
 }
 
-.code {
-  font-size: 25vh;
-  color: #340445;
-  font-weight: 600;
-  line-height: 1.125;
-  margin-bottom: 1.5rem;
+.box {
+  position: absolute;
+  background-color: #f1f1f1;
+  width: 120%;
+  right: -10%;
+  top: 55px;
+  padding: 7px 0px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
-.text {
-  font-size: 3vh;
-  font-weight: 400;
-  line-height: 1.25;
-  margin-top: -1.25rem;
-  margin-bottom: 1.5rem;
+.hidden {
+  display: none;
 }
 
-.return {
-  padding-left: 1em;
-  padding-right: 1em;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  font-size: 1rem;
-  height: 2.5em;
-  padding-bottom: calc(0.5em - 1px);
-  padding-top: calc(0.5em - 1px);
-  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica,
-    Arial, sans-serif;
+.arrow {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: #f1f1f1;
+  top: -5px;
+  right: 25px;
+  transform: rotate(45deg);
 }
 
-.return {
-  background-color: #fff;
-  border-color: #4a4a4a;
+.inner {
+  border-radius: 5px;
+  margin: 0px 5px;
 }
 
-.return:hover {
-  background-color: #D3D3D3;
-  border-color: #4a4a4a;
-  cursor: pointer;
+.inner:hover {
+  color: #d62929;
+  background-color: #0000001a;
 }
